idl-toolkit/models/test/vmodl/errors/UberYetAnotherError.vmodl
/*
 * Copyright 2012-2014 VMware, Inc.  All rights reserved.
 */
package vmodl.test.uber.errors;

/** a concrete custom error type */
class UberYetAnotherError extends UberError {
    /** custom field in a custom error type */
    long counter;
}
